Fix hero button size
Button in the hero section was too small so I increased the size to
make it more obvious.

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ ul {
     background-color: #3882F6;
     border-radius: 4px;
     border: none;
-    padding: 8px 12px;
+    padding: 8px 36px;
     color: #F9FAF8;
 }
 
